--- a/TopMenusReport/iframe.html
+++ b/TopMenusReport/iframe.html
@@ -567,7 +567,8 @@
 	        success: function (data) {
                 $("body",parent.document).find('.loading-box').hide();
                 $('.page-container').show();
-	            var item = data.data;
+	            var item = data.data.list;
+                var totalCount = data.data.totalCount;
 	            // clickCountSum 总点击量
 	            // ctr 总点击率
 	            // ecpm
@@ -687,7 +688,7 @@
 							'</div>'+
 							'';
 	            }
-	            $('#pager-count').html('共 '+item.length+' 条');
+	            $('#pager-count').html('共 '+totalCount+' 条');
 	            $('#todayTable').html(html);
                 setPage(item.length);
 
@@ -730,9 +731,6 @@
                                 data : dateList
                             }
                         ],
-                        grid: {
-                            //
-                        },
                         yAxis : [{
                                     type:'value',
                                     axisLine: {show: false},
@@ -796,6 +794,7 @@
                                     borderColor: 'rgb(77, 182, 172)',
                                     color: 'rgba(77, 182, 172, 0.5)'
                                 },
+                                areaStyle: {},
     	                        data: viewCountSumListEcharts
     	                    },
     	                    {
@@ -806,6 +805,7 @@
                                     borderColor: 'rgb(122, 255, 106)',
                                     color: 'rgba(122, 255, 106, 0.5)'
                                 },
+                                areaStyle: {},
     	                        data: pageViewCountSumListEcharts
     	                    },
     	                    {
@@ -815,6 +815,7 @@
                                     borderColor: 'rgb(172, 221, 150)',
                                     color: 'rgb(172, 221, 150)'
                                 },
+                                areaStyle: {},
     	                        data: clickCountSumListEcharts
     	                    },
     	                    {
@@ -824,6 +825,7 @@
                                     borderColor: 'rgb(255, 209, 85)',
                                     color: 'rgb(255, 209, 85)'
                                 },
+                                areaStyle: {},
     	                        data: ctrListEcharts
     	                    },
     	                    {
@@ -839,6 +841,7 @@
     	                                position: 'top'
     	                            }
     	                        },
+                                areaStyle: {},
     	                        data: ecpmListEcharts
     	                    },
                             {
@@ -848,6 +851,7 @@
                                     borderColor: 'rgb(253, 34, 34)',
                                     color: 'rgb(253, 34, 34)'
                                 },
+                                areaStyle: {},
                                 data: incomeSumLitEcharts
                             }
     	                ]
