文件大小写问题

--- a/TopMenusReport/iframe.html
+++ b/TopMenusReport/iframe.html
@@ -945,7 +945,7 @@
                     }
                 );
                 pager3.render();
-                pager3.set('urlTemplate', '/topMenusReport/iframe.html?page=' + (page+1) + '&pageSize=' + pageSize);
+                pager3.set('urlTemplate', '/TopMenusReport/iframe.html?page=' + (page+1) + '&pageSize=' + pageSize);
             }
         );
     }
