分代码表格部分增加totel和average

--- a/TopMenusReport/cproReport.html
+++ b/TopMenusReport/cproReport.html
@@ -330,8 +330,48 @@
                                 <div class="list-filter">
                                 </div>
                             </div>
+<esui-table class="report-list-general-table ui-ctrl ui-table skin-noGrid skin-noGrid-table" data-ui-id="listGeneralTable" data-ui-select="" data-ui-fields="@listGeneralFields" data-ui-datasource="@listGeneralData" data-ui-skin="noGrid" id="ctrl-report-list-listGeneralTable" data-ctrl-id="listGeneralTable" data-ctrl-view-context="report-list" style="width: 100%; display: none">
+    <div id="ctrl-report-list-listGeneralTable-head" class="ui-table-head skin-noGrid-table-head" data-control-table="listGeneralTable" style="width: 100%; top: 0px; left: 0px;"><div id="ctrl-report-list-listGeneralTable-head-panel" data-ui="type:Panel;id:ctrl-report-list-listGeneralTable-head-panel;" data-ctrl-id="ctrl-report-list-listGeneralTable-head-panel" data-ctrl-view-context="report-list" class="ui-ctrl ui-panel">
+        <table cellpadding="0" cellspacing="0" width="100%" data-control-table="listGeneralTable">
+            <tbody>
+                <tr>
+                    <th id="ctrl-report-list-listGeneralTable-title-cell0" data-index="0" class="ui-table-hcell skin-noGrid-table-hcell ui-table-cell-break skin-noGrid-table-cell-break" style="width:139px;"><div class="ui-table-hcell-text skin-noGrid-table-hcell-text ui-table-hcell-text-first skin-noGrid-table-hcell-text-first">筛选结果</div></th>
+                    <th id="ctrl-report-list-listGeneralTable-title-cell1" data-index="1" class="ui-table-hcell skin-noGrid-table-hcell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;"><div class="ui-table-hcell-text skin-noGrid-table-hcell-text">代码位展现量</div></th>
+                    <th id="ctrl-report-list-listGeneralTable-title-cell2" data-index="2" class="ui-table-hcell skin-noGrid-table-hcell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;"><div class="ui-table-hcell-text skin-noGrid-table-hcell-text">点击量</div></th>
+                    <th id="ctrl-report-list-listGeneralTable-title-cell3" data-index="3" class="ui-table-hcell skin-noGrid-table-hcell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;"><div class="ui-table-hcell-text skin-noGrid-table-hcell-text">点击率</div></th>
+                    <th id="ctrl-report-list-listGeneralTable-title-cell4" data-index="4" class="ui-table-hcell skin-noGrid-table-hcell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;"><div class="ui-table-hcell-text skin-noGrid-table-hcell-text">eCPM</div></th>
+                    <th id="ctrl-report-list-listGeneralTable-title-cell5" data-index="5" class="ui-table-hcell skin-noGrid-table-hcell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;"><div class="ui-table-hcell-text skin-noGrid-table-hcell-text ui-table-hcell-text-last skin-noGrid-table-hcell-text-last">收入</div></th>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div id="ctrl-report-list-listGeneralTable-body" class="ui-table-body skin-noGrid-table-body" style="overflow: auto; width: 100%; height: auto;">
+    <div id="ctrl-report-list-listGeneralTable-body-panel" data-ui="type:Panel;id:ctrl-report-list-listGeneralTable-body-panel" data-ctrl-id="ctrl-report-list-listGeneralTable-body-panel" data-ctrl-view-context="report-list" class="ui-ctrl ui-panel">
+        <div id="ctrl-report-list-listGeneralTable-row0" class="ui-table-row skin-noGrid-table-row ui-table-row-even skin-noGrid-table-row-even" data-index="0">
+            <table cellpadding="0" cellspacing="0" width="100%" data-control-table="listGeneralTable">
+            </table>
+        </div>
+        <div id="ctrl-report-list-listGeneralTable-row1" class="ui-table-row skin-noGrid-table-row ui-table-row-odd skin-noGrid-table-row-odd ui-table-row-last skin-noGrid-table-row-last" data-index="1">
+            <table cellpadding="0" cellspacing="0" width="100%" data-control-table="listGeneralTable">
+                <tbody>
+                    <tr>
+                        <td id="ctrl-report-list-listGeneralTable-cell1-0" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:139px;" data-control-table="listGeneralTable" data-row="1" data-col="0"><div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-first skin-noGrid-table-cell-text-first"><span id="ctrl-report-list-listGeneralTable-cell-textfield-1-0">平均值</span></div></td>
+                        <td id="ctrl-report-list-listGeneralTable-cell1-1" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="1" data-col="1"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-1-1"><p class="base-item">45,359</p></span></div></td>
+                        <td id="ctrl-report-list-listGeneralTable-cell1-2" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="1" data-col="2"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-1-2"><p class="base-item">162</p></span></div></td>
+                        <td id="ctrl-report-list-listGeneralTable-cell1-3" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="1" data-col="3"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-1-3"><p class="base-item">0.36%</p></span></div></td>
+                        <td id="ctrl-report-list-listGeneralTable-cell1-4" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="1" data-col="4"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-1-4"><p class="base-item">0.00</p></span></div></td>
+                        <td id="ctrl-report-list-listGeneralTable-cell1-5" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="1" data-col="5"><div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-last skin-noGrid-table-cell-text-last"><span id="ctrl-report-list-listGeneralTable-cell-textfield-1-5"><p class="base-item">0.00</p></span></div></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+</esui-table>
                             <div id="ctrl-report-list-table-top-placeholder" style="width: 100%; display: none; height: 0px;">
                             </div>
+
                             <!--
 
                                         Table
@@ -795,13 +835,6 @@
                             '<a data-command="detail">'+
                             item[i].name+
                             '</a></td>' +
-                            '<td id="ctrl-report-list-table-cell0-0" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break ui-table-cell-sorted skin-noGrid-table-cell-sorted"'+
-                            'style="width:20%;" data-control-table="table" data-row="0" data-col="0">'+
-                            '<div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-first skin-noGrid-table-cell-text-first">'+
-                            '<span id="ctrl-report-list-table-cell-textfield-0-0">'+
-                            '</span>'+
-                            '</div>'+
-                            '</td>'+
                             '<td id="ctrl-report-list-table-cell0-1" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break"'+
                             'style="width:16%;" data-control-table="table" data-row="0" data-col="1">'+
                             '<div class="ui-table-cell-text skin-noGrid-table-cell-text">'+
@@ -860,6 +893,13 @@
                 }
                 $('#pager-count').html('共 '+totalCount+' 条');
                 $('#todayTable').html(html);
+                if(codeLocationIdJsonArr && codeLocationIdJsonArr.length) {
+                    $('#ctrl-report-list-listGeneralTable').show();
+                    $('#ctrl-report-list-listGeneralTable-row0 table').html(setTotalAverageTable(data.data.total, '总和'));
+                    $('#ctrl-report-list-listGeneralTable-row1 table').html(setTotalAverageTable(data.data.average, '平均值'));
+                } else {
+                    $('#ctrl-report-list-listGeneralTable').hide();
+                }
                 // console.log(clickCountSumList);
                 // 基于准备好的dom，初始化echarts实例
                 pageCount = Math.ceil(totalCount / pageSize);
@@ -876,6 +916,19 @@
                 // alert('请求失败');
             }
         });
+    }
+
+    function setTotalAverageTable(data, title) {
+        return '<tbody>'+
+                    '<tr>' +
+                        '<td id="ctrl-report-list-listGeneralTable-cell0-0" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:139px;" data-control-table="listGeneralTable" data-row="0" data-col="0"><div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-first skin-noGrid-table-cell-text-first"><span id="ctrl-report-list-listGeneralTable-cell-textfield-0-0">' + title + '</span></div></td>'+
+                        '<td id="ctrl-report-list-listGeneralTable-cell0-1" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="0" data-col="1"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-0-1"><p class="base-item">' + (data.viewCountSum || data.viewCountAverage || '--') + '</p></span></div></td>'+
+                        '<td id="ctrl-report-list-listGeneralTable-cell0-2" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="0" data-col="2"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-0-2"><p class="base-item">' + (data.clickCountSum || data.clickCountAverage || '--') + '</p></span></div></td>' +
+                        '<td id="ctrl-report-list-listGeneralTable-cell0-3" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="0" data-col="3"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-0-3"><p class="base-item">' + data.ctr + '</p></span></div></td>'+
+                        '<td id="ctrl-report-list-listGeneralTable-cell0-4" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="0" data-col="4"><div class="ui-table-cell-text skin-noGrid-table-cell-text"><span id="ctrl-report-list-listGeneralTable-cell-textfield-0-4"><p class="base-item">' + data.ecpm + '</p></span></div></td>'+
+                        '<td id="ctrl-report-list-listGeneralTable-cell0-5" class="ui-table-cell skin-noGrid-table-cell ui-table-cell-break skin-noGrid-table-cell-break" style="width:99px;" data-control-table="listGeneralTable" data-row="0" data-col="5"><div class="ui-table-cell-text skin-noGrid-table-cell-text ui-table-cell-text-last skin-noGrid-table-cell-text-last"><span id="ctrl-report-list-listGeneralTable-cell-textfield-0-5"><p class="base-item">' + (data.incomeSum || data.incomeAverage || '--') + '</p></span></div></td>'+
+                    '</tr>'+
+                '</tbody>';
     }
 
     function setCodeSelect(params) {
@@ -896,7 +949,6 @@
                     });
                     $('#reportTbody').html(html);
                     codeItems = [].concat([], data.data);
-                    console.log(codeItems);
                 }
             },
             error: function(err) {
@@ -1151,10 +1203,15 @@
             var result = [], html = '';
             codeItems.forEach(function(item, index) {
                 if(item.name && item.name.indexOf(value) >= 0) {
-                    html += codeSelect(item.name, item.id);
+                    html += codeSelect(item.name, item.code_location_id);
                 } 
             });
             $('#reportTbody').html(html);
+
+            if(!value) {
+                $('#ctrl-report-list-esui8786429-batch-action-select').show();
+                $('#ctrl-report-list-esui8786429-batch-action-deselect').hide();
+            }
         });
         /*$('#ctrl-report-list-esui8786435').on('click', function() {
             var value = $('#ctrl-report-list-esui8786433-input').val();
